Map on tablet and text weight fix

--- a/assets/css/najdete-nas.css
+++ b/assets/css/najdete-nas.css
@@ -3,6 +3,7 @@
     margin: 30px 0;
     text-align: center;
     justify-self: center;
+    justify-items: center;
     padding: 0 22px;
 }
 
